[package]
name = "jabba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }

[dependencies]
async-lock = "2.6.0"
async-trait = "0.1.59"
#async-trait-with-sync = "0.1.36"
thiserror = "1.0.38"